--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
                     </configuration>
                 </execution>
             </executions>
+            <configuration>
+                <systemPropertyVariables>
+                    <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
+                </systemPropertyVariables>
+            </configuration>
         </plugin>
     </plugins>
     </build>
